--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   firebase_core: ^2.24.0
   cloud_firestore: ^4.13.3
+  http: ^1.1.2
 
 dev_dependencies:
   flutter_test:
